@@ -1,8 +1,8 @@
 {
-  "timestamp" : "2022-07-30T08:14:28Z",
+  "timestamp" : "2022-07-31T01:08:23Z",
   "count_outdated" : 424,
   "uniques_outdated" : 229,
-  "count" : 448,
+  "count" : 449,
   "uniques" : 241,
   "clones" : [
     {
@@ -77,8 +77,8 @@
     },
     {
       "timestamp": "2022-07-30T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
+      "count": 2,
+      "count_minmax": [ 1, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     }
